@@ -1038,74 +1038,4 @@ class PowerReadStallPort : public ReadStallPort <T>
   using ReadStallPort<T>::Read;
 };
 
-// Write method for PowerWritePort
-// Assumes power macro class is derived from ctrl base class
-
-template <class T, class POWER_MACRO_CLASS, int F>
-inline bool
-PowerWritePort<T,POWER_MACRO_CLASS,F>::Write(T data, UINT64 cycle)
-{ 
-  VERIFYX(this->IsConnected()); 
-  for (int f = 0; f < this->Fanout; f++) {
-    this->Buffer[f]->Write(data, cycle, this->GetName()); 
-  }  
-
-  // assertions above and in Write method will never allow them to
-  // return false, so...return true, or else make this a void function
-  return true;
-}
-
-// PowerReadPort Read method which is based on the virtual Read method 
-// in port.h
-
-template <class T, class POWER_MACRO_CLASS>
-inline bool
-PowerReadPort<T, POWER_MACRO_CLASS>::Read(T& data, UINT64 cycle)
-{ 
-  return (this->Buffer.Read(data, cycle, this->GetName())); 
-}
-
-
-// PowerReadSkidPort Read method which is based on the virtual Read method 
-// in port.h
-
-template <class T, class POWER_MACRO_CLASS, int S>
-inline bool
-PowerReadSkidPort<T,POWER_MACRO_CLASS, S>::Read(T& data, UINT64 cycle)
-{ 
-  return (this->Buffer.Read(data, cycle, this->GetName(), true)); 
-}
-
-// PowerReadStallPort Read method which is based on the virtual Read method
-// in port.h
-
-template <class T, class POWER_MACRO_CLASS>
-inline bool
-PowerReadStallPort<T, POWER_MACRO_CLASS>::Read(T& data, UINT64 cycle)
-{
-     //  we need to relax the asserts here since this port
-    //  does not need to be read every cycle
-  return (this->Buffer.Read(data, cycle, this->GetName(), true)); 
-}
-
-
-// PowerWriteSkidPort Write method which is based on the virtual Write method
-// in port.h
-
-template <class T, class POWER_MACRO_CLASS, int S>
-inline bool
-PowerWriteSkidPort<T,POWER_MACRO_CLASS, S>::Write(T data, UINT64 cycle)
-{
-  return (this->IsConnected()) && (this->Buffer->Write(data, cycle, this->GetName())); 
-}
-
-// PowerWriteStallPort Write method which is based on the virtual Write method
-// in port.h
-
-template <class T, class POWER_MACRO_CLASS>
-inline bool
-PowerWriteStallPort<T, POWER_MACRO_CLASS>::Write(T data, UINT64 cycle)
-{
-  return ((this->IsConnected()) && (this->Buffer->Write(data, cycle, this->GetName()))); }
-
 #endif
